# worktree

./: .gitignore  AGENTS.md  LICENSE  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: on_commit.yml  on_release.yml
src/worktree/: contract.py  decorators.py
src/worktree/impl/accessibility/: filesystem.py  memory.py
src/worktree/impl/items/: pydantic_model.py
src/worktree/mounting/: accessible.py  base.py  claim.py  protocol.py
src/worktree/syncable/: base.py  protocol.py
tests/: test_layout_anchor.py  test_layout_anchor_e2e.py  test_mount_drivers.py  test_pydantic_artifact.py  test_pydantic_artifact_e2e.py  test_pydantic_artifact_initialization.py  test_pydantic_artifact_initialization_e2e.py
