[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worktree"
version = "0.1.0"
description = "Worktree is a declarative runtime system for defining and synchronizing persistent Artifact graphs between memory and external backends, with explicit lifecycle control and composable state trees."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["worktree", "declarative", "persistence", "agentic-systems", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.13.4",
]

[project.urls]
Repository = "https://github.com/FilipMalczak/worktree"



[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-html>=4.1.1"
]


[tool.hatch.build.targets.wheel]
packages = ["src/worktree"]

[tool.pytest.ini_options]
pythonpath = ["src"]

# Produce both human-readable and machine-readable reports
addopts = "--html=report.html --self-contained-html --junitxml=report.xml"

[tool.uv.workspace]
members = []


